<resources>
    <string name="app_name">FecapassJava</string>
    <string name="data_evento">04 abr - 2025 · 23:00 > 07:00</string>
    <string name="local_evento">Quadra Rosas de Ouro, São Paulo - Barra Funda</string>
    <string name="titulo_descricao">Descrição do evento</string>
    <string name="descricao_evento">Prepare-se para a festa mais esperada do ano! A Fecapejada é uma celebração universitária que reúne toda a galera da FECAP em uma noite inesquecível de muita música, diversão e integração.Essa é a hora de reunir o bonde e viver o melhor da vida acadêmica fora da sala de aula.
🍻 Open bar
 🎶 DJs e atrações ao vivo
💃 Pista fervendo a noite inteira
 📸 Espaço instagramável pra eternizar o rolê.</string>
    <string name="titulo_politica">Política do evento</string>
    <string name="texto_politica">Cancelamentos de pedidos serão aceitos até 7 dias após a compra, desde que a solicitação seja enviada até 48 horas antes do início do evento.</string>
    <string name="botao_comprar">Comprar ingresso</string>
    <string name="pix">Após o QRCode do pix ser gerado, você tem 30 minutos para efetuar o pagamento. Caso contrário o pedido será automaticamente cancelado.</string>
</resources>